메인 페이지 생성

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> cute-cat</h1>
+    <h1> cute-cat: main</h1>
     <div> 똥 치워줘</div>
 </body>
 </html>
